<resources>
    <string name="app_name">&#160;Dose for Reddit&#160;</string>


    //ads
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    //onSaveInstanceState
    <string name="pref_pageNo" translatable="false">pref_pageNo</string>
    <string name="pref_firstView" translatable="false">pref_firstView</string>
    <string name="pref_lastClicked" translatable="false">pref_lastClicked</string>

    //Intent
    <string name="action_share">Share</string>

    //Navigation Drawer
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    //MainActivity pref
    <string name="pref_post_subreddit" translatable="false">subreddit</string>
    <string name="pref_post_subreddit_default" translatable="false">popular</string>

    <string name="pref_post_subreddit_rule" translatable="false">subreddit rule</string>

    <string name="pref_my_subreddit" translatable="false">my_subreddit</string>
    <string name="pref_my_subreddit_default" translatable="false">subscriber</string>

    <string name="pref_post_sort_by" translatable="false">Sort posts by</string>
    <string name="pref_post_sort_by_default" translatable="false">hot</string>

    <string name="pref_post_detail_sub" translatable="false">Post detail sub</string>
    <string name="pref_post_detail_id" translatable="false">Post detail id</string>
    <string name="pref_post_detail_sort_key" translatable="false">Post detail sort key</string>

    <string name="pref_search_post" translatable="false">Search Post</string>
    <string name="pref_search_subreddit" translatable="false">Search Subreddit</string>
    <string name="pref_empty_tag" translatable="false"/>



    //Main activity problems
    <string name="no_connection">No internet connection</string>
    <string name="no_connection_sub_text">Please fix your internet connection</string>
    <string name="server_problem">Server not responding</string>
    <string name="server_problem_sub_text">We will fix it as soon as possible</string>
    <string name="no_favorite">List of favorite movies is empty </string>
    <string name="no_favorite_sub_text">Please add your favorite movies to the list</string>
    <string name="menu_login">Login</string>

    //Subreddit
    <string name="subscribers">subscribers</string>
    <string name="subscribe">subscribe</string>
    <string name="unsubscribe">unsubscribe</string>
    <string name="privateSub">private</string>
    <string name="is18">18+</string>

    //Settings
    <string name="search_posts">Search posts</string>
    <string name="search_subreddits">Search subreddits</string>

    //Add
    <string name="editor_insert_user_successful">User signed in!</string>
    <string name="editor_insert_user_failed">Error with signing in</string>

    //Login
    <string name="pref_access_code" translatable="false">Code</string>
    <string name="pref_login_signed_in" translatable="false">Username</string>

    //Comment
    <string name="pref_comment_sort_by" translatable="false">Sort comments by</string>

    //Search dialog
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="drawerFrontPage">Popular</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="action_refresh">Refresh</string>

    ///xxxx
    <string name="image">image</string>
    <string name="sorted_by">sorted by:</string>
    <string name="error">Error</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
    <string name="comment_vote_up">Comment vote up</string>
    <string name="comment_vote_down">Comment vote down</string>
    <string name="post_vote_up">Post vote up</string>
    <string name="post_vote_down">Post vote down</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="sort_method">Sort method</string>
    <string name="share">Share</string>
    <string name="comment">Comment</string>
    <string name="do_you_want_to_log_out">Do you want to log out?</string>
    <string name="log_out">Log out</string>
    <string name="enter_search_phrase">Enter search phrase</string>
    <string name="comments">comments</string>
    <string name="drawerAllPage">All</string>
    <string name="mySubreddits">My Subreddits</string>
    <string name="helpAndFeedback">Help \u0026 Feedback</string>
    <string name="submit">Submit</string>
    <string name="homePage">Home</string>
    <string name="privacyPolicy">Privacy Policy</string>


</resources>
