<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menuLogin"
        android:orderInCategory="100"
        android:title="@string/menu_login"
        app:showAsAction="never" />

    <item
        android:id="@+id/search"
        android:orderInCategory="100"
        android:title="@string/search"
        app:showAsAction="never">
        <menu xmlns:android="http://schemas.android.com/apk/res/android">
            <item android:title="@string/search_posts"
                  android:id="@+id/searchPosts" />
            <item android:title="@string/search_subreddits"
                  android:id="@+id/searchSubreddits" />
        </menu>
    </item>

    <item
        android:id="@+id/refresh"
        android:orderInCategory="100"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

</menu>