<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    app:cardCornerRadius="5dp"
                                    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleDialogSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/dialogTitleBackground"
            android:text="@string/do_you_want_to_log_out"
            android:gravity="start"
            android:padding="10dp"
            android:textColor="@color/dialogTitleTextColor"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/arrowColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancelDialog"
                android:layout_weight="1"
                android:textColor="@color/dialogButtonTextColor"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:background="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/cancel" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/arrowColor"/>

            <Button
                android:id="@+id/loginDialog"
                android:layout_weight="1"
                android:textColor="@color/dialogButtonTextColor"
                android:textSize="16sp"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:background="@color/colorWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/log_out" />

        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>