<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/navigation_header_container"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/header_background"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:padding="10dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="1"
                android:text="@string/app_name"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_marginStart="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:textColor="@color/username"
                android:layout_height="wrap_content"/>

            <ImageView
                android:id="@+id/spinnerArrow"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_alignBottom="@+id/username"
                android:layout_toEndOf="@+id/username"
                android:scaleType="fitCenter"
                android:tint="@color/username"
                android:src="@drawable/ic_signal_cellular_4_bar"
                android:contentDescription="@string/username"/>

        <View
            android:layout_width="match_parent"
            android:layout_marginTop="1dp"
            android:layout_marginBottom="10dp"
            android:layout_height="1dp"
            android:layout_alignEnd="@+id/spinnerArrow"
            android:layout_alignStart="@+id/username"
            android:layout_below="@+id/username"
            android:background="@color/username"/>

        <ImageView
            android:layout_marginEnd="20dp"
            android:layout_alignBottom="@+id/username"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add"
            android:contentDescription="@string/username"/>




    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/arrowColor"/>

</LinearLayout>