<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/commentItemFrame"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:orientation="vertical">


        <TextView
            android:id="@+id/ups"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:paddingBottom="2dp"
            android:paddingTop="2dp"
            android:textSize="12sp"/>

        <RelativeLayout
            android:id="@+id/upContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/ups">

            <ImageView
                android:id="@+id/upArrowB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/post_vote_up"
                android:src="@drawable/up"
                android:tint="@color/colorBlack"/>

            <ImageView
                android:id="@+id/upArrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/upArrowB"
                android:layout_margin="1dp"
                android:contentDescription="@string/post_vote_up"
                android:src="@drawable/up"
                android:tint="@color/arrowColor"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/downContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/ups">

            <ImageView
                android:id="@+id/downArrowB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:contentDescription="@string/post_vote_down"
                android:src="@drawable/down"
                android:tint="@color/colorBlack"/>

            <ImageView
                android:id="@+id/downArrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/downArrowB"
                android:layout_margin="1dp"
                android:contentDescription="@string/post_vote_down"
                android:src="@drawable/down"
                android:tint="@color/arrowColor"/>
        </RelativeLayout>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/detailContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_weight="13.5">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textColor="@color/textTitle"/>

        <TextView
            android:id="@+id/linkFlairText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/title"
            android:background="@drawable/shape_link_flair_text"
            android:paddingEnd="4dp"
            android:paddingStart="4dp"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/domain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_toEndOf="@id/linkFlairText"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/subreddit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/domain"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/comments"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/domain"
            android:layout_toEndOf="@id/subreddit"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/domain"
            android:layout_toEndOf="@id/comments"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="12sp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/imageContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="4"
        android:padding="2dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="horizontal"
            app:cardCornerRadius="5dp">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/thumbnail"
                android:scaleType="centerCrop"/>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</LinearLayout>